[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "inventory-management-ai-mcp"
version = "1.0.0"
description = "MCP server for inventory management ai. Features reorder point, demand forecast, sku optimizer. From MEOK AI Labs."
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [{name = "MEOK AI Labs", email = "nicholas@meok.ai"}]
dependencies = ["mcp>=1.0.0"]
keywords = ["mcp", "ai", "meok", "inventory", "management"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
[project.urls]
Homepage = "https://meok.ai"
Repository = "https://github.com/CSOAI-ORG/inventory-management-ai-mcp"
[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["server.py"]

[project.scripts]
inventory_management_ai_mcp = "server:main"
